force-app/main/default/objects/Work_Order_Setting__c/Work_Order_Setting__c.object-meta.xml
<CustomObject>
    <label>Work Order Setting</label>
    <nameField>
        <label>Work Order Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>