force-app/main/default/objects/Work_Order_Setting__c/fields/Feild_Mapping_JSON__c.field-meta.xml
<CustomField>
    <fullName>Feild_Mapping_JSON__c</fullName>
    <label>Feild Mapping JSON</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>