force-app/main/default/objects/Work_Order_Setting__c/fields/Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_JSON__c</fullName>
    <label>Filter JSON</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>