force-app/main/default/objects/Work_Order_Setting__c/fields/Invoice_Payment_JSON__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_JSON__c</fullName>
    <label>Invoice Payment JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>