force-app/main/default/objects/Work_Order_Setting__c/fields/Invoicing_Fields__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Fields__c</fullName>
    <label>Invoicing Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>