force-app/main/default/objects/Work_Order_Setting__c/fields/Platform_Selection_JSON__c.field-meta.xml
<CustomField>
    <fullName>Platform_Selection_JSON__c</fullName>
    <label>Platform Selection JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>