force-app/main/default/objects/Work_Order_Setting__c/fields/Product_Type_mapping__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_mapping__c</fullName>
    <label>Product Type mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>