force-app/main/default/objects/Work_Order_Setting__c/fields/WorkOrder_LineItem_FieldSet_JSON__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_LineItem_FieldSet_JSON__c</fullName>
    <label>WorkOrder LineItem FieldSet JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>