force-app/main/default/objects/Work_Order_Setting__c/fields/WorkOrder_Record_Type_JSON__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Record_Type_JSON__c</fullName>
    <label>WorkOrder Record Type JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>