force-app/main/default/objects/Work_Order_Setting__c/recordTypes/FilterCondition.recordType-meta.xml
<RecordType>
    <fullName>FilterCondition</fullName>
    <active>true</active>
    <label>FilterCondition</label>
</RecordType>