force-app/main/default/objects/Work_Order_Setting__c/recordTypes/Invoicing.recordType-meta.xml
<RecordType>
    <fullName>Invoicing</fullName>
    <active>true</active>
    <label>Invoicing</label>
</RecordType>